<resources>
    <string name="app_name">RunR</string>

    <string name="conf_redirect_uri">me.cpele.runr://spotify-redirect</string>

    <string name="common_retry">Retry</string>

    <string name="login_please_wait">Logging in…</string>

    <string name="start_run">Start Run</string>
    <string name="continue_run">Continue Run</string>

    <string name="running_decrease">-5</string>
    <string name="running_steps_per_min">Steps/min.</string>
    <string name="running_spm_increase">+5</string>
    <string name="running_spm_default_value">\u2014</string>
    <string name="running_default_cover_desc">Current track cover</string>
    <string name="running_no_track_found">No track found</string>

    <string name="check_setup_spotify_please_install">1. Install Spotify</string>
    <string name="check_setup_spotify_open_store">Open Play Store</string>
    <string name="check_setup_spotify_please_login">2. Login on Spotify</string>
    <string name="check_setup_spotify_login">Login</string>
    <string name="check_setup_headline">Before using this application for the first time, you need to set up Spotify on your device. Please complete the following steps.</string>
    <string name="check_setup_lets_go">3. Let\'s go!</string>
    <string name="check_setup_start_running">Start Running</string>
    <string name="check_setup_step_done">Done 👍</string>
</resources>
