<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infra.view.RunningFragment">

    <Button
        android:id="@+id/running_spm_decrease"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/running_decrease"
        app:layout_constraintBottom_toBottomOf="@+id/running_spm_value"
        app:layout_constraintEnd_toStartOf="@+id/running_spm_value"
        app:layout_constraintTop_toTopOf="@+id/running_spm_value"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/running_spm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/running_steps_per_min"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/running_spm_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/running_spm_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="72dp"
        android:gravity="center"
        android:text="@string/running_spm_default_value"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/running_spm_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/running_spm_label"
        app:layout_constraintTop_toBottomOf="@+id/running_spm_label"
        tools:text="150" />

    <Button
        android:id="@+id/running_spm_increase"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/running_spm_increase"
        app:layout_constraintBottom_toBottomOf="@+id/running_spm_value"
        app:layout_constraintStart_toEndOf="@+id/running_spm_value"
        app:layout_constraintTop_toTopOf="@+id/running_spm_value" />

</androidx.constraintlayout.widget.ConstraintLayout>